2003-10-09  Per Bothner  <per@bothner.com>

	* ApplyMethodProc.java (module):  Make field public.
	* CpsMethodProc.java (module):  Make field public.

2003-10-07  Per Bothner  <per@bothner.com>

	* Procedure.java (getSymbol, setSymbol):  New methods.
	(getName):  Check for a Symbol as the name property.
	* ApplyMethodProc.java (<init>):  Name can be a Symbol or a String.
	* CpsMethodProc.java (<init):  Likewise.

	* Environment.java (setPrevious):  New method.

	* Values.java (equals):  Remove - for now use inherited method,
	which for a Value just compares identity.

2003-09-30  Per Bothner  <per@bothner.com>

	* CallContext.java (startFromContext, getFromContext,
	cleanupFromContext):  New methods. 

2003-09-11  Per Bothner  <per@bothner.com>

	* Values.java (nextValue):  Adjust curIndex by buffer gap size.

2003-09-04  Per Bothner  <per@bothner.com>

	* CallContext.java (getRestArgsArray, getRestArgsList):  New methods.

	* CpsMethodProc.java (getName):  New method.

2003-08-08  Daniel Bonniot  <Daniel.Bonniot@inria.fr>

	* ProecdureN.java (noArgs):  New static field.
	(apply0):  Use it (so we don't depend on Values).

2003-07-12  Per Bothner  <per@bothner.com>

	* Future.java (parent):  Remove unused field.
	(iniBindings):  New field.
	(<init>):  Combine construcors.
	Set initBindings using getFields().
	(run):  Set context's fluidBindings using initBindings.
	Fixes bug reported 7/11 by Chris.Dean@sokitomi.com.

2003-07-10  Per Bothner  <per@bothner.com>

	* CallContext.java (getArgAsObject):  Make non-public.
	(getArgs):  Use getNextArg instead of getArgAsObject.
	* Procedure.java (apply):  Likewise.

2003-05-30  Per Bothner  <per@bothner.com>

	* WrongType.java (getMessage):  Don't print causes's message if null.

2003-05-08  Per Bothner  <per@bothner.com>

	* WrappedException.java:  Add so-far-commented-out hooks
	to use JDK-1.4-style getCause/initCause.

2003-05-03  Per Bothner  <per@bothner.com>

	* CallContext.java.in:  Renamed back to ...